<resources>

    <string name="app_name">JobSchedular</string>
    <string name="required_network_type">Required Network Type!</string>
    <string name="none">None</string>
    <string name="any">Any</string>
    <string name="wifi">WIFI</string>
    <string name="schedule_job">Schedule Job</string>
    <string name="cancle_job">Cancle Job</string>
    <string name="requires">Requires</string>
    <string name="idle">Idle</string>
    <string name="charging" >Charging</string>
</resources>
